--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
-{ 
-  "engines": {
-    "node": ">=16.0.0 <17.0.0",
-    "npm": ">=8.0.0 <9.0.0"
-  },
+{
   "name": "web",
   "version": "0.1.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
