--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "web",
   "version": "0.1.0",
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "node": "16.15.0",
+    "npm": "8.16.0"
   },
   "private": true,
   "dependencies": {
